src/test/scala/au/edu/mq/comp/perentiemq/iml/syntax/keyworderr1.out
src/test/scala/au/edu/mq/comp/perentiemq/iml/keyworderr1.iml:2:5: error: identifier expected
def if(a): (b) = {
    ^

